Issue #73 - fixed contrast for the three themes

--- a/client/src/components/QueueList/index.css
+++ b/client/src/components/QueueList/index.css
@@ -11,5 +11,5 @@ span.percentage{
 
 .button-and-percentage-cont>span{
     background: var(--neutral);
-    color: var(--main-text-color);
+    color: var(--contrast-text-color);
 }
